--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "request": "^2.64.0",
     "fs": "^0.0.2",
     "net": "^1.0.0",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "react-dom": "^0.14.2"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.1.11",
