--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "fs": "^0.0.2",
     "net": "^1.0.0",
     "tls": "^0.0.1",
-    "react-dom": "^0.14.2"
+    "react-dom": "^0.14.2",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.1.11",
