--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "net": "^1.0.0",
     "tls": "^0.0.1",
     "react-dom": "^0.14.2",
-    "querystring": "^0.2.0"
+    "react-infinite": "^0.6.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.1.11",
