--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   },
   "dependencies": {
     "axios": "^0.5.4",
-    "react": "^0.14.2",
-    "react-redux": "^0.8.0",
-    "react-router": "^1.0.0-rc3",
-    "history": "^1.12.0",
-    "redux": "^1.0.0-rc",
-    "request": "^2.64.0",
     "fs": "^0.0.2",
+    "history": "^1.12.0",
     "net": "^1.0.0",
-    "tls": "^0.0.1",
+    "querystring": "0.2.0",
+    "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-infinite": "^0.6.0",
-    "querystring": "0.2.0"
+    "react-redux": "^0.8.0",
+    "react-render": "^1.0.1",
+    "react-router": "^1.0.0-rc3",
+    "redux": "^1.0.0-rc",
+    "request": "^2.64.0",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.1.11",
