--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cssnext": "^1.4.0",
     "cssnext-loader": "^1.0.1",
     "csswring": "^3.0.4",
+    "node-sass": "^3.4.1",
     "postcss": "^4.1.8",
     "postcss-loader": "^0.4.1",
     "postcss-nested": "^0.3.1",
