--- a/package.json
+++ b/package.json
@@ -35,18 +35,14 @@
     "babel-core": "^5.2.6",
     "babel-loader": "^5.0.0",
     "colors": "^1.1.0",
-    "css-loader": "^0.14.0",
-    "cssnext": "^1.4.0",
-    "cssnext-loader": "^1.0.1",
+    "css-loader": "^0.14.5",
     "csswring": "^3.0.4",
+    "json-loader": "^0.5.3",
     "node-sass": "^3.4.1",
-    "postcss": "^4.1.8",
-    "postcss-loader": "^0.4.1",
-    "postcss-nested": "^0.3.1",
-    "style-loader": "^0.12.1",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.12.4",
     "webpack": "^1.8.11",
     "webpack-dev-server": "^1.8.2",
-    "wordwrap": "1.0.0",
-    "json-loader": "^0.5.3"
+    "wordwrap": "1.0.0"
   }
 }
