--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer-core": "^5.1.11",
     "babel-core": "^5.2.6",
     "babel-loader": "^5.0.0",
+    "babylon": "^6.1.21",
     "colors": "^1.1.0",
     "css-loader": "^0.14.5",
     "csswring": "^3.0.4",
@@ -41,8 +42,8 @@
     "node-sass": "^3.4.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.4",
-    "webpack": "^1.8.11",
-    "webpack-dev-server": "^1.8.2",
+    "webpack": "^1.12.6",
+    "webpack-dev-server": "^1.12.1",
     "wordwrap": "1.0.0"
   }
 }
