--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-render": "^1.0.1",
     "react-router": "^1.0.0-rc3",
     "redux": "^1.0.0-rc",
+    "redux-thunk": "^1.0.0",
     "request": "^2.64.0",
     "tls": "^0.0.1"
   },
